--- a/src/app/components/inbound/inbound-package/inbound-package.scss
+++ b/src/app/components/inbound/inbound-package/inbound-package.scss
@@ -43,3 +43,15 @@
 .animate-zoomIn {
   animation: zoomIn 0.45s cubic-bezier(0.22, 1, 0.36, 1) forwards;
 }
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+.animate-marquee {
+  animation: marquee 30s linear infinite;
+}
