--- a/src/app/components/inbound/inbound.html
+++ b/src/app/components/inbound/inbound.html
@@ -50,7 +50,7 @@
                             <div class="flex items-center justify-between mb-4">
                                 <h3 class="text-xl font-bold">{{ state.name }}</h3>
                                 <div class="space-x-3">
-                                    <a href="https://drive.google.com/file/d/1lYR2QH5u5ZYLzRI9FmW_xirldU8_Nz8h/view?usp=drive_link"
+                                    <a href="https://drive.google.com/file/d/1lYR2QH5u5ZYLzRI9FmW_xirldU8_Nz8h/view?usp=sharing"
                                         target="_blank" rel="noopener noreferrer" class="hover:text-red-600 transition"
                                         title="View PDF">
                                         <i class="pi pi-file-pdf text-md text-white hover:scale-125"></i>
