--- a/src/app/components/pages/header/header.html
+++ b/src/app/components/pages/header/header.html
@@ -13,14 +13,14 @@
                     IDT WORLD
                 </span>
                 <span class="text-xs md:text-sm text-gray-700 italic">
-                    Authentically Crafted, Passionately Curated
+                    Authentically Crafted, Passionately Curated!
                 </span>
             </div>
         </a>
 
         <!-- Desktop Nav + Socials -->
         <div class="hidden md:flex items-center gap-8">
-            <nav class="flex items-center gap-8 text-[15px] font-medium">
+            <nav class="flex items-center gap-8 text-[15px] font-medium" aria-label="nav">
                 <a routerLink="/" class="hover:text-red-600 transition-colors">Home</a>
                 <a routerLink="/inbound" class="hover:text-red-600 transition-colors">Inbound</a>
                 <a routerLink="/outbound" class="hover:text-red-600 transition-colors">Outbound</a>
