--- a/src/app/components/pages/header/header.html
+++ b/src/app/components/pages/header/header.html
@@ -13,7 +13,7 @@
                     IDT WORLD
                 </span>
                 <span class="text-xs md:text-sm text-gray-700 italic">
-                    Authentically Crafted, Passionately Curated!
+                    Authentically Crafted, Passionately Curated!1
                 </span>
             </div>
         </a>
