inbound filter, footer

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -10,7 +10,7 @@
             <h1 class="font-serif text-xl sm:text-xl md:text-2xl lg:text-3xl px-6 py-3 w-fit md:w-3/4
                        font-bold text-white bg-red-500 leading-tight rounded-lg shadow-lg" data-aos="fade-right"
                 data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="500">
-                <span class="inline-block animate-float">End of your Tour Search starts from here...</span>
+                <span class="inline-block animate-float">With IDT, every destination is a fresh story!</span>
             </h1>
 
             <p
