--- a/src/app/components/pages/header/header.html
+++ b/src/app/components/pages/header/header.html
@@ -7,15 +7,22 @@
                 <img src="assets/images/logo.png" alt="IDT Logo"
                     class="w-10 h-10 object-contain transition-transform duration-300 group-hover:scale-110">
             </div>
-            <div class="flex flex-col leading-tight">
-                <span
-                    class="text-xl md:text-2xl font-bold bg-gradient-to-r from-red-600 to-red-500 bg-clip-text text-transparent tracking-wide">
-                    IDT WORLD
+            <div class="flex flex-col leading-tight gap-1">
+                <span class="text-xl md:text-2xl font-extrabold tracking-wide
+                           bg-gradient-to-r from-red-600 via-red-500 to-orange-400
+                           bg-clip-text text-transparent">
+                    IDT WORLD OF DESTINATIONS
                 </span>
-                <span class="text-xs md:text-sm text-gray-700 italic">
-                    Authentically Crafted, Passionately Curated!
+
+                <span class="text-xs md:text-sm text-gray-600 font-medium tracking-wide">
+                    An India Destination Tours Concern
                 </span>
+
+                <!-- <span class="text-xs md:text-sm text-gray-700 italic">
+                    Authentically Crafted. Passionately Curated.
+                </span> -->
             </div>
+
         </a>
 
         <!-- Desktop Nav + Socials -->
