--- a/src/app/components/inbound/inbound-package/inbound-hotels/inbound-hotels.html
+++ b/src/app/components/inbound/inbound-package/inbound-hotels/inbound-hotels.html
@@ -11,7 +11,7 @@
             </p>
         </div>
         <div class="flex flex-wrap gap-2 justify-between">
-            <div *ngFor="let pack of hotelPackages" class="group flex flex-col w-full sm:w-1/2 md:w-[22%] lg:w-[24%]
+            <div *ngFor="let pack of hotelPackages" class="group flex flex-col w-full sm:w-[49%] md:w-[22%] lg:w-[24%]
              bg-white/60 backdrop-blur-lg rounded-2xl border border-gray-200 shadow-lg
              hover:shadow-2xl transition-all duration-500 p-0 overflow-hidden
              min-h-[520px] hover:scale-105">
