--- a/src/app/components/pages/footer/footer.html
+++ b/src/app/components/pages/footer/footer.html
@@ -54,11 +54,11 @@
                 Quick Links
             </h4>
             <ul class="space-y-2 text-gray-400">
-                <li><a routerLink="/" class="hover:text-pink-400 transition">Home</a></li>
-                <li><a routerLink="/inbound" class="hover:text-pink-400 transition">Inbound</a></li>
-                <li><a routerLink="/outbound" class="hover:text-pink-400 transition">Outbound</a></li>
-                <li><a routerLink="/services" class="hover:text-pink-400 transition">Services</a></li>
-                <li><a routerLink="/contact" class="hover:text-pink-400 transition">Contact</a></li>
+                <li><a [routerLink]="['/']" class="hover:text-pink-400 transition">Home</a></li>
+                <li><a [routerLink]="['/inbound']" class=" hover:text-pink-400 transition">Inbound</a></li>
+                <li><a [routerLink]="['/outbound']" class=" hover:text-pink-400 transition">Outbound</a></li>
+                <li><a [routerLink]="['/services']" class=" hover:text-pink-400 transition">Services</a></li>
+                <li><a [routerLink]="['/contact']" class=" hover:text-pink-400 transition">Contact</a></li>
             </ul>
         </div>
 
