--- a/src/app/components/inbound/inbound-package/inbound-package.html
+++ b/src/app/components/inbound/inbound-package/inbound-package.html
@@ -91,7 +91,8 @@
                       }"> </i>
                     </button>
                     <!-- Content -->
-                    <div class="transition-all duration-500 ease-in-out overflow-hidden bg-white"
+                    <div class="transition-all duration-500 ease-in-out overflow-hidden
+         bg-[url('assets/images/redBg11.jpg')] bg-center"
                         [style.maxHeight]="openSection.includes(section.id) ? '3000px' : '0px'">
                         <div>
                             <ng-container [ngSwitch]="section.id">
