--- a/src/app/components/inbound/inbound-package/inbound-itinerary/inbound-itinerary.html
+++ b/src/app/components/inbound/inbound-package/inbound-itinerary/inbound-itinerary.html
@@ -1,14 +1,9 @@
-<section data-animate="detailed-itinerary"
-    class="relative bg-gradient-to-b from-white via-red-50 to-white rounded-2xl shadow-2xl p-4 overflow-hidden">
-
-    <!-- <h2 class="text-3xl font-bold text-gray-900 mb-12 flex items-center items-center gap-3">
-        <span class="bg-red-100 p-4 rounded-full shadow-md">🗺️</span>
-        <span class="tracking-wide">Explore your daily programme</span>
-    </h2> -->
-
-    <div class="relative">
-        <div
-            class="absolute left-6 top-0 bottom-0 w-1 bg-gradient-to-b from-red-500 via-pink-400 to-red-500 rounded-full">
+<section data-animate="detailed-itinerary" class="relative overflow-hidden rounded-2xl p-6
+    backdrop-blur-xl shadow-[0_25px_80px_-20px_rgba(220,38,38,0.45)]">
+    <div class="relative z-10">
+        <div class="absolute left-6 top-0 bottom-0 w-[3px]
+             bg-gradient-to-b from-red-600 via-pink-500 to-red-600
+             rounded-full shadow-[0_0_20px_rgba(239,68,68,0.6)]">
         </div>
 
         <div *ngFor="let day of detailedItinerary; let i = index" class="relative flex items-start mb-6 group"
@@ -22,7 +17,7 @@
             <!-- Card -->
             <div class="ml-20 w-full backdrop-blur-lg border border-red-100 shadow-md rounded-2xl p-4 w-full
                   hover:shadow-xl hover:scale-[1.02] transition-all duration-300 bg-center bg-cover" style="
-                background-image: url('assets/images/redBg3.jpg');">
+                background-image: url('assets/images/redBg11.jpg');">
 
                 <!-- Day Title -->
                 <h3 class="text-xl font-semibold text-red-600 mb-2"> {{ day.day }} – {{ day.title }} </h3>
