--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,3 +1,5 @@
+<app-home-features></app-home-features>
+
 <div class="bg-white flex items-center justify-center overflow-hidden">
     <div class="absolute inset-0 w-full h-full bg-cover bg-center opacity-20  bg-[url('assets/images/bg2.jpg')]"> </div>
     <div class=" container mx-auto flex flex-col lg:flex-row items-center transition-all duration-700 ease-in-out">
