--- a/src/app/components/outbound/outbound.html
+++ b/src/app/components/outbound/outbound.html
@@ -1,5 +1,5 @@
 <app-quotes [quote]="quotes"></app-quotes>
-<div class="min-h-screen bg-gray-50 py-8">
+<div class="min-h-screen bg-gray-50 py-8 bg-[url('assets/images/banner3.jpg')] bg-cover">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <!-- Header -->
         <div class="relative text-center mb-20">
@@ -21,11 +21,7 @@
 
         <app-outbound-map></app-outbound-map>
 
-        <div class="bg-white rounded-2xl shadow-xl p-8 mb-12">
-            <h2 class="text-2xl font-bold text-red-500 mb-8 text-center">
-                Explore Destinations by Country
-            </h2>
-
+        <div class="rounded-2xl p-8 mb-12">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
                 <div #countryCard *ngFor="let country of countries" class="group cursor-pointer"
                     (click)="navigateToCountry(country.code)">
