--- a/src/app/components/pages/footer/footer.html
+++ b/src/app/components/pages/footer/footer.html
@@ -69,26 +69,26 @@
                 Reach Us
             </h4>
 
-            <p class="text-gray-400 flex items-start gap-2 mb-2">
+            <p class="text-gray-400 flex items-center gap-2 mb-2">
                 <i class="pi pi-map-marker text-red-500"></i>
                 Kaloor- Ernakulam – 682020
             </p>
 
-            <p class="text-gray-400 flex items-start gap-2 mb-2">
+            <p class="text-gray-400 flex items-center gap-2 mb-2">
                 <i class="pi pi-phone text-red-500"></i>
                 <a href="tel:+919567479777" class="hover:text-pink-400">
                     Enquiry: +91 95674 79777
                 </a>
             </p>
 
-            <p class="text-gray-400 flex items-start gap-2 mb-2">
+            <p class="text-gray-400 flex items-center gap-2 mb-2">
                 <i class="pi pi-envelope text-red-500"></i>
                 <a href="mailto:go@goidt.in" class="hover:text-pink-400">
                     go@goidt.in
                 </a>
             </p>
 
-            <p class="text-gray-400 flex items-start gap-2">
+            <p class="text-gray-400 flex items-center gap-2">
                 <i class="pi pi-globe text-red-500"></i>
                 <a href="https://www.goidt.in" target="_blank" class="hover:text-pink-400">
                     www.goidt.in
