--- a/src/app/components/inbound/inbound-package/inbound-package.html
+++ b/src/app/components/inbound/inbound-package/inbound-package.html
@@ -24,7 +24,7 @@
                     </span>
 
                 </div>
-                <p class="text-xl md:text-xl max-w-4xl mx-auto leading-relaxed opacity-90 text-medium py-3">
+                <p class="text-xl md:text-xl max-auto mx-auto leading-relaxed opacity-90 text-medium py-3">
                     {{ packageData?.summary }}
                 </p>
             </div>
