--- a/src/app/components/pages/contact/contact.html
+++ b/src/app/components/pages/contact/contact.html
@@ -73,8 +73,8 @@
                     <div class="flex flex-wrap gap-2 text-sm">
                         <h4 class="font-semibold text-red-500 whitespace-nowrap"> Email: </h4>
                         <p class="text-red-500/90">
-                            <a href="mailto:go@indiadestinationtours.com" class="hover:underline">
-                                go@indiadestinationtours.com
+                            <a href="mailto:hrishi@goidt.in" class="hover:underline">
+                                hrishi@goidt.in
                             </a>,
                             <a href="mailto:go@goidt.in" class="hover:underline">
                                 go@goidt.in
