--- a/src/app/components/home/home-hotels/home-hotels.html
+++ b/src/app/components/home/home-hotels/home-hotels.html
@@ -22,7 +22,7 @@
     <div class="relative w-full max-w-3xl max-h-[80vh] overflow-y-auto
              rounded-2xl border border-red-500/20 shadow-[0_0_40px_rgba(255,0,80,0.15)]
              backdrop-blur-xl p-5 animate-scaleIn bg-cover bg-center bg-no-repeat"
-        [ngStyle]="{'background-image': 'url(assets/images/redBg12.jpg)'}" (click)="$event.stopPropagation()">
+        [ngStyle]="{'background-image': 'url(assets/images/redbg16.jpg)'}" (click)="$event.stopPropagation()">
         <div class="flex items-center justify-between mb-4">
             <h3 class="text-xl md:text-2xl font-bold bg-gradient-to-r from-white to-red-50
                bg-clip-text text-transparent"> {{ activeDestination.name }} </h3>
