--- a/src/app/components/pages/footer/footer.html
+++ b/src/app/components/pages/footer/footer.html
@@ -84,7 +84,7 @@
             <p class="text-gray-400 flex items-center gap-2 mb-2">
                 <i class="pi pi-envelope text-red-500"></i>
                 <a href="mailto:go@goidt.in" class="hover:text-pink-400">
-                    go@goidt.in
+                    go@goidt.in, <br> hrishi@goidt.in, <br> bhagavath@goidt.in 
                 </a>
             </p>
 
